--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,10 +33,10 @@ jobs:
 
       - name: Create tar.gz archives
         run: |
-          tar -czf zig-out/x86_64-linux-gnu.tar.gz -C zig-out/x86_64-linux-gnu . ../LICENSE ../README.md
-          tar -czf zig-out/x86_64-linux-musl.tar.gz -C zig-out/x86_64-linux-musl . ../LICENSE ../README.md
-          tar -czf zig-out/aarch64-linux.tar.gz -C zig-out/aarch64-linux . ../LICENSE ../README.md
-          tar -czf zig-out/aarch64-macos.tar.gz -C zig-out/aarch64-macos . ../LICENSE ../README.md
+          tar -czf zig-out/x86_64-linux-gnu.tar.gz -C zig-out/x86_64-linux-gnu . ../../LICENSE ../../README.md
+          tar -czf zig-out/x86_64-linux-musl.tar.gz -C zig-out/x86_64-linux-musl . ../../LICENSE ../../README.md
+          tar -czf zig-out/aarch64-linux.tar.gz -C zig-out/aarch64-linux . ../../LICENSE ../../README.md
+          tar -czf zig-out/aarch64-macos.tar.gz -C zig-out/aarch64-macos . ../../LICENSE ../../README.md
 
       - name: Create release and upload binaries
         uses: ncipollo/release-action@v1.14.0
