--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-zig-out
-.zig-cache
-output
+zig-out/
+.zig-cache/
+output/
+__tests__/test[1-9].c
+__tests__/test[1-9][0-9].c
+__tests__/test[1-9][0-9][0-9].c
+__tests__/test1000.c
